[project]
name = "om3utils"
description = "TODO"
keywords = ["COSIMA", "access-om3", "ocean modeling"]
authors = [
  {name = "Micael Oliveira"},
]
dynamic = ["version"]
dependencies = [
    "f90nml",
    "ruamel.yaml",
    "xarray",
    "numpy",
    "netcdf4",
    "ocean_model_grid_generator@git+https://github.com/nikizadehgfdl/ocean_model_grid_generator@790069b31f9791864ccd514a2b8f53f385a0452e",
    "esmgrids@git+https://github.com/anton-seaice/esmgrids@0a563c2916674a6a963140c2cbf1c9c6ebfee1c7",
]

[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["om3utils"]

[tool.setuptools_scm]
write_to = "om3utils/_version.py"


[project.optional-dependencies]
devel = [
    "flake8",
    "black",
]
test = [
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
addopts = ["--cov=om3utils", "--cov-report=term", "--cov-report=xml"]
testpaths = ["tests"]
norecursedirs = ["tests/ocean_model_grid_generator"]

[tool.coverage.run]
omit = ["om3utils/__init__.py", "om3utils/_version.py"]

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
